--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>二值转盘抽奖</title>
+    <title>请求起飞</title>
     <style>
       :root {
         --color-yes: #ff6b6b; /* 打 */
@@ -114,7 +114,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>二值转盘（20等分，打/不打各10）</h1>
+      <h1>这里给个标题吧</h1>
       <div class="wheel-wrapper">
         <canvas id="wheelCanvas" width="420" height="420"></canvas>
         <div class="pointer" aria-hidden="true"></div>
